<?xml version="1.0"?>
<package>
  <name>mx_demo</name>
  <version>0.0.1</version>
  <description>The mx_demo package</description>

  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mx_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msg</build_depend>
  <run_depend>mx_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msg</run_depend>


  <export>
  </export>
</package>
