<package>
  <name>mx_dynamixel</name>
  <version>0.1.0</version>
  <description>
    This stack contains packages that are used to interface with Robotis
    MX-Dynamixel servo motors using communication protocol 2.0. This
    supports the MX-28, MX-64, MX-106 models. Other models are compatible 
    with 2.0 communication have not been tested.
  </description>
  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/svenzvarobotics/mx_motor</url>

  <author>Max Svetlik</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mx_msgs</run_depend>
  <run_depend>mx_controllers</run_depend>
  <run_depend>mx_driver</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
