<package>
  <name>mx_msgs</name>
  <version>0.4.0</version>
  <description>
    Common messages used throughout dynamixel_motor stack.
  </description>
  <maintainer email="max@svenzva.com">Max Svetlik</maintainer>

  <license>BSD</license>

  <author>Max Svetlik, Antons Rebguns</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
